--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <main>
         <section id="login">
             <div id="imagem">
-                Foto
+                <!--Imagem no CSS-->
             </div>
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Bem vindo(a) novamente ao FUTchurras. Faça login para acessar sua conta.</p>
                 <form action="login.php" method="post">
-                    
+
                 </form>
             </div>
 
