--- a/index.html
+++ b/index.html
@@ -44,3 +44,7 @@
 </body>
 
 </html>
+git branch -m main <BRANCH>
+git fetch origin
+git branch -u origin/<BRANCH> <BRANCH>
+git remote set-head origin -a
